--- a/docs/overrides/extra.css
+++ b/docs/overrides/extra.css
@@ -234,7 +234,7 @@
   transition: opacity 0.2s;
 }
 .ab-reveal-label {
-  color: #55DDAA;
+  color: #0D1B2A;
   font-weight: 700;
   font-size: 1.02rem;
   text-align: center;
@@ -283,8 +283,8 @@
   .ab-reveal-box {
     width: 110px;
     height: 110px;
-    min-width: 90px;
-    min-height: 90px;
+    min-width: 130px;
+    min-height: 130px;
     max-width: 130px;
     max-height: 130px;
     padding: 0;
